# OrzEmbed

./: .gitignore  LICENSE  README.md
docs/: ESP-IDF-ANALYSIS.md  ESP-IDF-LEARNING-PATH.md  ESP32-C6.md
project/c/: CMakeLists.txt
project/c/main/: main.c
project/rust/: Cargo.toml  build.rs
project/rust/.cargo/: config.toml
project/rust/src/: main.rs
project/swift/: Package.swift  destination.json
project/swift/Sources/MyApp/: main.swift
scripts/: esp32-setup-macos.sh  esp32c6-build-flash.sh  esp32c6-swift-build-flash.sh
