[package]
name = "my-rust-project"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
esp-idf-hal = "0.45.2"
esp-idf-svc = "0.51.0"
log = "0.4"

[build-dependencies]
embuild = "0.33"

[features]
default = ["std"]
std = ["esp-idf-sys/std"]
